examples/test/testpolicy14118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14118
  namespace: namespace278
spec:
  podSelector:
    matchLabels:
      key27: value14
      key39: value33
      key36: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value27
      podSelector:
        matchLabels:
          key22: value23
